--- a/dashboard/apps/straight-lines/index.html
+++ b/dashboard/apps/straight-lines/index.html
@@ -37,7 +37,7 @@
 
 		<!-- Second Row = Settings -->
 		<div class="content active" id="project_conf">
-			<div class="row">
+			<div class="row ">
 				<div class="small-12 medium-6 large-4 columns">
 					<div class="row">
 						<div class="small-12 columns">
@@ -110,8 +110,8 @@
 
 		<!-- Third Row =  -->
 		<div class="content" id="project_content">
-			<div class="row">
-				<div class="small-12 medium-6 large-4 columns">
+			<div class="row ">
+				<div class="small-12 medium-6 large-4 columns separator">
 					<div class="row">
 						<div class="small-7 columns">
 							<h3>Add a line</h3>
@@ -122,7 +122,7 @@
 						</div>
 					</div>
 					<form>
-						<div class="row">
+						<div class="row ">
 							<div class="small-12 columns">
 								<label>Line Name :
 								<input type="text" placeholder="Name" id="line_name">
@@ -178,7 +178,7 @@
 						</div>
 					</form>
 				</div>
-				<div class="small-12 medium-6 large-4 columns">
+				<div class="small-12 medium-6 large-4 columns separator">
 					<div class="row">
 						<div class="small-7 columns">
 							<h3>Jobs List</h3>
@@ -187,37 +187,37 @@
 							<div class="small button right" id="reset">Reset</div>
 						</div>
 					</div>
-					<table class="small-12 columns">
-						<thead>
-							<tr>
-								<th class="small-5">Name</th>
-								<th class="small-5">X0,Y0 - X1,Z1</th>
-								<th class="small-1">E</th>
-								<th class="small-1">X</th>
-							</tr>
-						</thead>
-						<tbody class="list-lines-container"></tbody>
-					</table>
+					<div class= "row">
+						<table class="small-12 columns">
+							<thead>
+								<tr>
+									<th class="small-5">Name</th>
+									<th class="small-5">X0,Y0 - X1,Z1</th>
+									<th class="small-1">E</th>
+									<th class="small-1">X</th>
+								</tr>
+							</thead>
+							<tbody class="list-lines-container"></tbody>
+						</table>
+					</div>
 				</div>
 
-				<div class="small-12 medium-12 large-4 columns">
+				<div class="small-12 medium-12 large-4 columns separator">
 					<div class="row">
 						<div class="small-12 columns">
 							<h3>Grid</h3>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row ">
 						
 					</div>
 				</div>
-
+			</div>
 			<div class="row">
 				<div class="small-12 columns">
 					<button class="right" id="run">Run List</button>
 				</div>
 			</div>
-		</div>
-
 		</div>
 	</section>
 
