--- a/dashboard/apps/job_manager/index.html
+++ b/dashboard/apps/job_manager/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html> 
 <html> 
 <head>
 	<meta charset="utf-8">
@@ -19,29 +18,42 @@
 		</section>
 	</header>
 
-	<section class="container current-job-container" style="display:none">
+	<section class="container current-job-container fabmo-file-control" style="display:none">
 		<div class="row title">
-			<div class="small-12 columns">
-				<h3 class="running-job-name"></h3>
+			<div class="small-8 large-8 columns">
+				<h3 class="running-job-name filename"></h3>
+			</div>
+			<div class="small-2 large-2 columns fabmo-pause-button btn">
+				<a class="small button warning">P</a>
+			</div>
+			<div class="small-2 large-2 columns fabmo-resume-button hide btn">
+				<a class="small button success">R</a>
+			</div>
+			<div class="small-2 large-2 columns fabmo-stop-button btn">
+				<a class="small button alert">S</a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="small-12 columns current-job-item">
-				<div class="running-job-description"></div>
+			<div class="small-9 medium-7 large-7 columns current-job-item">
+				<p class="running-job-description"></p>
+			</div>
+			<div class="small-3 medium-2 large-1 columns current-job-submitted"><p>12'20"</p></div>
+			<div class="small-12 medium-3 large-4 columns progress secondary round">
+				<span class="meter progress" style="width: 70%"></span>
 			</div>
 		</div>
 	</section>
 
 	<section class="container">
 		<div class="row title">
-			<div class="small-5 large-8 columns">
+			<div class="small-5 medium-5 large-8 columns">
 				<h3>Pending Jobs</h3>
 			</div>
-			<div class="small-7 large-4 columns">
+			<div class="small-7 medium-7 large-4 columns">
 				<div class="button-bar right">
 					<ul class="button-group">
-					    <li><a class="[tiny small large] button run-next">Run Next</a></li>
-					    <li><a class="[tiny small large] button clear-jobs">Clear Queue</a></li>
+					    <li><a class="small button run-next">Run Next</a></li>
+					    <li><a class="small button clear-jobs">Clear Queue</a></li>
 					</ul>
 				</div>
 			</div>
@@ -50,15 +62,14 @@
 		<div class="row no-jobs" style="display:none;">
 			<div class="small-12 columns no-jobs-item">
 				<div data-alert class="alert-box secondary">
-				  No jobs in the queue, click here to submit a job
-				  <!--<a href="#" class="close">&times;</a>-->
+				  No jobs, click here to add a job
 				</div>
 			</div>
 		</div>
 
 		<div class="row jobs-row">
 			<!-- JOB LISTING -->
-			<table class="small-12">
+			<table class="small-12 columns">
 				<thead>
 					<tr>
 						<th class="small-3">Job Name</th>
@@ -100,11 +111,6 @@
   <script type="text/javascript">
   	var tool;
   	var ui;
-
-	$(document).ready(function(){
-		//Foundation Init
-		$(document).foundation();
-	});
 
 	function refresh_jobs_list(){
 		// Load the list of files available on the tool
@@ -163,25 +169,29 @@
 		});
 	});
 
-	fabmoDashboard.getMachine(function(err, machine) {
-		tool = new FabMo(machine.ip, machine.port);
-		ui = new FabMoUI(tool);
+	$(document).ready(function(){
+		//Foundation Init
+		$(document).foundation();
 
-		// Load the list of files available on the tool
-		refresh_jobs_list();
+		fabmoDashboard.getMachine(function(err, machine) {
+			tool = new FabMo(machine.ip, machine.port);
+			ui = new FabMoUI(tool);
 
-		ui.on('status', function(status) {
-			console.log(status.job)
-			if(status.job) {
-				$(".current-job-container").show(500);
-				$(".running-job-name").html(status.job.name);
-				$(".running-job-description").html(status.job.description);
-			} else {
-				$(".current-job-container").hide(500);
-			}
+			// Load the list of files available on the tool
+			refresh_jobs_list();
+
+			ui.on('status', function(status) {
+				console.log(status.job)
+				if(status.job) {
+					$(".current-job-container").show(500);
+					$(".running-job-name").html(status.job.name);
+					$(".running-job-description").html(status.job.description);
+				} else {
+					//$(".current-job-container").hide(500);
+				}
+			});
 		});
-	})
-
+	});
 
 </script>
 
