Fix Current Job View

--- a/dashboard/apps/job_manager/index.html
+++ b/dashboard/apps/job_manager/index.html
@@ -187,7 +187,7 @@
 					$(".running-job-name").html(status.job.name);
 					$(".running-job-description").html(status.job.description);
 				} else {
-					//$(".current-job-container").hide(500);
+					$(".current-job-container").hide(500);
 				}
 			});
 		});
