--- a/dashboard/apps/straight-lines/index.html
+++ b/dashboard/apps/straight-lines/index.html
@@ -118,7 +118,7 @@
 
 						</div>
 						<div class="small-5 columns">
-							<div class="small button right" id="add-line">Add</div>
+							<div class="small button right secondary" id="add-line">Add</div>
 						</div>
 					</div>
 					<form>
@@ -184,7 +184,7 @@
 							<h3>Jobs List</h3>
 						</div>
 						<div class="small-5 columns">
-							<div class="small button right" id="reset">Reset</div>
+							<div class="small button right alert" id="reset">Reset</div>
 						</div>
 					</div>
 					<div class= "row">
@@ -215,7 +215,7 @@
 			</div>
 			<div class="row">
 				<div class="small-12 columns">
-					<button class="right" id="run">Run List</button>
+					<button class="right success" id="run">Run List</button>
 				</div>
 			</div>
 		</div>
