--- a/dashboard/apps/straight-lines/index.html
+++ b/dashboard/apps/straight-lines/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="./css/foundation.min.css">
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/custom.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -208,8 +209,10 @@
 							<h3>Grid</h3>
 						</div>
 					</div>
-					<div class="row ">
-						
+					<div class="row">
+						<div class="small-12 columns">
+							<canvas id="myCanvas" ></canvas>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -222,15 +225,16 @@
 	</section>
 
   <!-- Javascript inclusions -->
-  <script src="./js/libs/jquery-1.10.2.js"></script>
-  <script src="./js/libs/foundation.min.js"></script>
+  <script type="text/javascript" src="./js/libs/jquery-1.10.2.js"></script>
+  <script type="text/javascript" src="./js/libs/foundation.min.js"></script>
+  <script type="text/javascript" src="./js/libs/paper-full.js"></script>
 
   <script type="text/javascript" src="./js/app.js"></script>
   <script type="text/javascript" src="./js/custom.js"></script>
 
   <!-- Include dashboard.js, will be removed later -->
-  <script src="./js/FabMo-latest.js"></script>
-  <script src="./js/dashboard.js"></script>
+  <script type="text/javascript" src="./js/FabMo-latest.js"></script>
+  <script type="text/javascript" src="./js/dashboard.js"></script>
 
   <!-- Main App's Javascript -->
   <script type="text/javascript">
@@ -263,6 +267,8 @@
 		else {
 			Tasks.addLine();
 		}
+		//Test
+		drawCanvas();
 	});
 
 	//Delete all the tasks
@@ -301,7 +307,45 @@
 		//Get Tasks from storage (if stored)
 		//L = dashboard.getAppSetting("straight-lines","Tasks") ? dashboard.getAppSetting("straight-lines","Tasks") : [];
 		console.log(Tasks);
+
+		//Init Canbas
+		paper.install(window);
+		paper.setup('myCanvas');
+
+		var canvasWidth = 281;
+		toolPath = new Path();
+
+		// Give the stroke a color
+		toolPath.strokeColor = '#ddd';
+		toolPath.strokeWidth = parseInt((canvasWidth/s.x)*s.bit_d);
+		toolPath.add(new Point(0, 0), new Point(200, 50));
+		
+		initCanvas();
 	});
+
+	/*
+
+	function initCanvas(){
+		var i = 0;
+
+		var canvasWidth = $("#myCanvas").width();
+		var canvasHeight = $("myCanvas").width();
+
+		backPath = new Path();
+		backPath.strokeColor = '#eee';
+		backPath.strokeWidth = 1;
+	}
+
+	function drawCanvas(){
+		var canvasWidth = $("#myCanvas").width();
+		var canvasHeight = $("myCanvas").width();
+
+		console.log(canvasWidth);
+
+		// Create a Paper.js Path to draw a line into it:
+		toolPath.add(new Point(0, 0), new Point(200, 50));
+	}
+	*/
 </script>
 
 </body>
