--- a/dashboard/apps/straight-lines/index.html
+++ b/dashboard/apps/straight-lines/index.html
@@ -211,7 +211,15 @@
 					</div>
 					<div class="row">
 						<div class="small-12 columns">
-							<canvas id="myCanvas" ></canvas>
+							<canvas id="myCanvas" keepalive="true"></canvas>
+						</div>
+					</div>
+					<div class="row">
+						<div class="small-6 columns center">
+							<span class="label secondary" id="xScale"></span>
+						</div>
+						<div class="small-6 columns center">
+							<span class="label secondary" id="yScale"></span>
 						</div>
 					</div>
 				</div>
@@ -229,6 +237,7 @@
   <script type="text/javascript" src="./js/libs/foundation.min.js"></script>
   <script type="text/javascript" src="./js/libs/paper-full.js"></script>
 
+  <!--**** App & Custom App Library : order matters !!! ****-->
   <script type="text/javascript" src="./js/app.js"></script>
   <script type="text/javascript" src="./js/custom.js"></script>
 
@@ -267,8 +276,6 @@
 		else {
 			Tasks.addLine();
 		}
-		//Test
-		drawCanvas();
 	});
 
 	//Delete all the tasks
@@ -307,45 +314,8 @@
 		//Get Tasks from storage (if stored)
 		//L = dashboard.getAppSetting("straight-lines","Tasks") ? dashboard.getAppSetting("straight-lines","Tasks") : [];
 		console.log(Tasks);
-
-		//Init Canbas
-		paper.install(window);
-		paper.setup('myCanvas');
-
-		var canvasWidth = 281;
-		toolPath = new Path();
-
-		// Give the stroke a color
-		toolPath.strokeColor = '#ddd';
-		toolPath.strokeWidth = parseInt((canvasWidth/s.x)*s.bit_d);
-		toolPath.add(new Point(0, 0), new Point(200, 50));
-		
-		initCanvas();
 	});
 
-	/*
-
-	function initCanvas(){
-		var i = 0;
-
-		var canvasWidth = $("#myCanvas").width();
-		var canvasHeight = $("myCanvas").width();
-
-		backPath = new Path();
-		backPath.strokeColor = '#eee';
-		backPath.strokeWidth = 1;
-	}
-
-	function drawCanvas(){
-		var canvasWidth = $("#myCanvas").width();
-		var canvasHeight = $("myCanvas").width();
-
-		console.log(canvasWidth);
-
-		// Create a Paper.js Path to draw a line into it:
-		toolPath.add(new Point(0, 0), new Point(200, 50));
-	}
-	*/
 </script>
 
 </body>
