--- a/dashboard/apps/straight-lines/index.html
+++ b/dashboard/apps/straight-lines/index.html
@@ -111,7 +111,7 @@
 		<!-- Third Row =  -->
 		<div class="content" id="project_content">
 			<div class="row ">
-				<div class="small-12 medium-6 large-4 columns separator">
+				<div class="small-12 medium-6 large-4 columns">
 					<div class="row">
 						<div class="small-7 columns">
 							<h3>Add a line</h3>
@@ -186,8 +186,9 @@
 							</div>
 						</div>
 					</form>
+					<div class="show-for-small-only separator small-12 columns"></div>
 				</div>
-				<div class="small-12 medium-6 large-4 columns separator">
+				<div class="small-12 medium-6 large-4 columns">
 					<div class="row">
 						<div class="small-7 columns">
 							<h3>Jobs List</h3>
@@ -209,9 +210,10 @@
 							<tbody class="list-lines-container"></tbody>
 						</table>
 					</div>
+					<div class="show-for-small-only separator small-12 columns"></div>
 				</div>
 
-				<div class="small-12 medium-12 large-4 columns separator">
+				<div class="small-12 medium-12 large-4 columns">
 					<div class="row">
 						<div class="small-12 columns">
 							<h3>Grid</h3>
@@ -230,7 +232,9 @@
 							<span class="label secondary" id="yScale"></span>
 						</div>
 					</div>
+				<div class="show-for-small-only separator small-12 columns"></div>
 				</div>
+			<div class="show-for-medium-up separator small-12 columns"></div>
 			</div>
 			<div class="row">
 				<div class="small-12 columns">
