includes fixe moves mod to the keypad

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -160,6 +160,10 @@
               <ul class="off-canvas-list">
                 <li><label>Keypad</label></li>
                 <li class="fabmo-keypad" style="display:none;">
+                <div class="inline">
+                  <div class="small-7 columns">Fixed move <input class="fixe-move" type="checkbox"></div>
+                  <div class=" hide small-5 columns"><input class="fixe-move-step" type="text"></div>
+                </div>
                   <div class="row" >
                     <div class="small-8 columns axis">
                         <button class="button button-minus-X"></button>
