New app for holes, improvments

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -104,21 +104,21 @@
                 <li>
                   <div class="row axis">
                     <div class="small-8 columns">
-                      <label>X<span class="in">in</span><span class="posx pos"></span></label>
+                      <label>X<span class="in">in</span><span class="posx pos"></span><input type"text" class="posx pos" style="display:none;" value=""></label>
                     </div>
                     <div class="small-2 columns home"><span class="button-zerox">X<label>0</label></span></div>
                     <div class="small-2 columns set"><span class="button-homexy"></span></div>
                   </div>
                   <div class="row axis">
                     <div class="small-8 columns">
-                      <label>Y<span class="in">in</span><span class="posy pos"></span></label>
+                      <label>Y<span class="in">in</span><span class="posy pos"></span><input type"text" class="posy pos" style="display:none;" value=""></label>
                     </div>
                     <div class="small-2 columns home"><span class="button-zeroy">Y<label>0</label></span></div>
                     <div class="small-2 columns set"><span class="button-homez"></span></div>
                   </div>
                   <div class="row axis">
                     <div class="small-8 columns">
-                      <label>Z<span class="in">in</span><span class="posz pos"></span></label>
+                      <label>Z<span class="in">in</span><span class="posz pos"></span><input type"text" class="posx pos" style="display:none;" value=""></label>
                     </div>
                     <div class="small-2 columns home"><span class="button-zeroz">Z<label>0</label></span></div>
                     <div class="small-2 columns set"><span class="button-probez"></span></div>
@@ -179,18 +179,6 @@
                   </li>
               </ul>
             </div>
-
-            <!-- ********** Keypad Widget ********** -->
-            <!--
-            <div id="keypad" class="widget trackpad">
-              <ul class="off-canvas-list">
-                <li><label>Trckpd</label></li>
-                <li class="fabmo-trackpad" style="">
-                  <div id="trackpad-zone"></div>
-                </li>
-              </ul>
-            </div>
-            -->
 
             <!-- ************ File Control Widget ************ -->
             <div id="job-info" class="widget">
