--- a/dashboard/apps/rectangle/index.html
+++ b/dashboard/apps/rectangle/index.html
@@ -141,10 +141,23 @@
 									</div>
 								</div>
 							</div>
-							<div class="small-12 columns">
+							<div class="small-8 columns circle_radius_container">
 								<label>Radius :
 								<input type="text" value="0.5" id="circle_radius">
 								</label>
+							</div>
+							<div class="small-8 columns circle_diam_container" style="display:none;">
+								<label>Diameter :
+								<input type="text" value="1.0" id="">
+								</label>
+							</div>
+							<div class="small-4 columns center">
+								<Label>R ↔ D
+								<div class="switch small">
+									<input id="radius_diameter" type="checkbox" name="radius_diameter">
+									<label for="radius_diameter"></label>
+								</div>
+								</Label>
 							</div>
 							<div class="small-12 columns center">
 								<Label>Toolpath</Label>
